# locamind

./: .dockerignore  .gitignore  .pdm-python  README.md  compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
bienlocation/apps/common/: apps.py  context_processors.py  exceptions.py  models.py  services.py  types.py  utils.py  views.py
bienlocation/apps/core/: apps.py  validators.py
bienlocation/apps/core/admin/: __init__.py  email_admin.py  user_admin.py
bienlocation/apps/core/forms/: auth_forms.py  user_forms.py
bienlocation/apps/core/migrations/: 0001_initial.py  0002_user_email_confirmed.py
bienlocation/apps/core/models/: __init__.py  base_models.py  email_models.py  user_models.py
bienlocation/apps/core/selectors/: user_selectors.py
bienlocation/apps/core/services/: auth_services.py  email_services.py  user_services.py
bienlocation/apps/core/tasks/: email_tasks.py
bienlocation/apps/core/tests/test_models/: test_user_model.py
bienlocation/apps/core/tests/test_views/: test_index_view.py
bienlocation/apps/core/urls/: __init__.py  accounts_urls.py  web.py
bienlocation/apps/core/views/accounts/: activate_view.py  login_view.py  register_confirm_view.py  register_done_view.py  register_view.py  request_activate_view.py
bienlocation/apps/core/views/home/: index_view.py
bienlocation/apps/urls/: __init__.py
bienlocation/apps/views/: index.py
bienlocation/static/css/: input.css  output.css
bienlocation/templates/: base.html  index.html
bienlocation/templates/accounts/: login.html  register.html  request_activate_success.html
bienlocation/templates/accounts/email/: base_email.html
bienlocation/templates/accounts/password_reset/: password_reset_confirm.html  request_password_reset.html
bienlocation/templates/auth/: login.html  register.html
bienlocation/templates/base/: base.html  base_empty.html  base_without_navbar.html
bienlocation/templates/errors/: 404.html
bienlocation/templates/partials/: footer.html  icon.html  input_form.html  navbar.html  sidebar.html  tailwind-debug.html  toast.html
config/: settings.py  urls.py
config/settings/: base.py  local.py  production.py  testing.py
config/urls/: __init__.py
docker/local/django/: Dockerfile  entrypoint  start
requirements/: base.txt  dev.txt  lint.txt
src/: manage.py
src/apps/accounts/: admin.py  apps.py  forms.py  managers.py  models.py  repository.py  selectors.py  types.py  urls.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/services/: auth.py  auth_service.py  auth_services.py  social_auth_service.py  token_service.py  user.py  user_service.py  user_services.py
src/apps/accounts/views/: activation_view.py  login_view.py  login_with_google_view.py  logout_view.py  register_confirm_view.py  register_view.py  request_activation_view.py
src/apps/common/: context_processors.py  enums.py  exceptions.py  repository.py  services.py  types.py  utils.py  validators.py  views.py
src/apps/common/repositories/: abstract_base_repository.py  base_repository.py  django_base_repository.py  django_repository.py
src/apps/dashboard/: admin.py  enum.py  urls.py
src/apps/dashboard/migrations/: 0001_initial.py
src/apps/dashboard/models/: __init__.py  address.py  address_model.py  contract_model.py  documents.py  landlords.py  profile_model.py  proof_identity.py  properties.py  property_model.py  receipt_model.py  receipts.py  tenancies.py  tenant_model.py  tenants.py
src/apps/dashboard/views/: index_view.py
src/apps/emails/: admin.py  apps.py  enum.py  models.py  repository.py  services.py  tasks.py  types.py
src/apps/emails/migrations/: 0001_initial.py
src/apps/guest/: urls.py
src/apps/guest/views/: landing_view.py  legal_view.py
src/apps/home/: urls.py
src/apps/home/views/: landing_view.py  legal_view.py
src/apps/landing/: urls.py
src/apps/landing/views/: landing_view.py  legal_view.py
src/apps/profiles/: models.py  services.py  types.py
src/apps/profiles/migrations/: 0001_initial.py
src/config/: asgi.py  celery.py  env.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  local.py  production.py  testing.py
src/static/common/css/: style.css
src/static/common/scss/: main.scss
src/static/css/: output.css
src/templates/accounts/: activate_success.html  login.html  register.html  register_done.html  request_activate_success.html
src/templates/accounts-old/: activate_success.html  login.html  register.html  register_done.html  request_activate_success.html
src/templates/accounts-old/components/: googleLoginButton.html
src/templates/accounts-old/email/: activation_success.html  base_email.html
src/templates/accounts-old/password_reset/: password_reset_complete.html  password_reset_confirm.html  request_password_reset.html  request_password_reset_done.html
src/templates/accounts/components/: googleLoginButton.html
src/templates/accounts/email/: activation.html  activation_success.html  request_reset_password.html
src/templates/accounts/partials/: social_button.html
src/templates/accounts/password_reset/: password_reset_complete.html  password_reset_confirm.html  request_password_reset.html  request_password_reset_done.html
src/templates/base/: base.html  base_empty.html  base_without_navbar.html
src/templates/cotton/layouts/: auth.html  base.html  dashboard.html  guest.html
src/templates/dashboard/: index-old.html  index.html
src/templates/dashboard/partials/: navbar.html  sidebar.html
src/templates/email/: activation_success.html  base_email.html
src/templates/email/partials/: footer.html
src/templates/errors/: 404.html
src/templates/guest/: landing.html
src/templates/home/: landing.html
src/templates/layouts/: base.html
src/templates/partials/: footer.html  icon.html  input_form.html  js.html  metadata.html  navbar.html  sidebar.html  tailwind-debug.html  toast.html
src/templates/partials/navbar/: app.html
src/templates/partials/sidebar/: app.html  sidebar_item.html
src/templates/partials/ui/: button_link.html  theme.html
(+41 files in other folders)
